# wiredesk

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
apps/wiredesk-client/: Cargo.toml  Info.plist
apps/wiredesk-client/src/: app.rs  clipboard.rs  clipboard_files.rs  config.rs  exec_bridge.rs  interactive_ipc_e2e.rs  ipc.rs  keyboard_tap.rs  link.rs  logging.rs  main.rs  monitor.rs  ns_event_monitor.rs  presentation.rs  restart.rs  shell_channel.rs  status_bar.rs
apps/wiredesk-client/src/input/: keymap.rs  mapper.rs  mod.rs
apps/wiredesk-host/: Cargo.toml  build.rs
apps/wiredesk-host/src/: clipboard.rs  clipboard_files.rs  config.rs  injector.rs  logging.rs  main.rs  session.rs  session_thread.rs  shell.rs
apps/wiredesk-host/src/ui/: autostart.rs  format.rs  icons.rs  mod.rs  settings_window.rs  single_instance.rs  status_bridge.rs  transfer_overlay.rs  tray.rs
apps/wiredesk-term/: Cargo.toml
apps/wiredesk-term/src/: ipc_transport.rs  main.rs  resolve.rs
crates/wiredesk-core/: Cargo.toml
crates/wiredesk-core/src/: bluetooth_config.rs  cache_vacuum.rs  error.rs  lib.rs  storm.rs  types.rs
crates/wiredesk-exec-core/: Cargo.toml
crates/wiredesk-exec-core/src/: helpers.rs  ipc.rs  lib.rs  runner.rs  transport.rs  types.rs
crates/wiredesk-protocol/: Cargo.toml
crates/wiredesk-protocol/src/: clip_file.rs  cobs.rs  crc.rs  lib.rs  message.rs  packet.rs
crates/wiredesk-transport/: Cargo.toml
crates/wiredesk-transport/src/: detect.rs  factory.rs  lib.rs  mock.rs  serial.rs  transport.rs
crates/wiredesk-transport/src/bluetooth/: fragment.rs  mac.rs  mod.rs  reconnect.rs  runtime.rs  stub.rs  uuids.rs  win.rs
docs/: architecture.md  bluetooth-transport.md  setup.md  wd-exec-usage.md
docs/briefs/: bluetooth-transport.md  clipboard-files.md  clipboard-images.md  daemon-multiplex.md  ft232h-upgrade.md  gui-shell-pty-emulator.md  host-conpty.md  interactive-wd-via-gui-ipc.md  keyboard-hijack.md  launcher-ui.md  mac-auto-reconnect.md  sentinel-detection-ansi-tail.md  serial-error-storm-recovery.md  terminal-uplift.md  ui-redesign.md  wd-exec-compression.md  wd-exec-followup-quickwins.md  wd-exec-host-environment-quirks.md  wd-exec-improvements.md  wd-exec-payload-quoting.md  wd-exec-utf8-byte-loss.md  wd-exec-via-gui-ipc.md  wd-exec.md  wd-put-file-builtin.md
docs/plans/: 20260501-keyboard-hijack.md  20260501-launcher-ui.md  20260501-ui-redesign.md  20260502-clipboard-images.md  20260503-host-conpty.md  20260503-terminal-uplift.md  20260503-wd-exec.md  20260504-wd-exec-fixes.md  20260506-bluetooth-le-transport.md  20260528-clipboard-files.md  20260604-error-storm-recovery.md  20260703-interactive-wd-via-gui-ipc.md  concurrent-finding-lighthouse.md  wiredesk-mvp.md
docs/plans/completed/: 20260501-keyboard-hijack.md  20260501-launcher-ui.md  20260501-ui-redesign.md  20260502-clipboard-images.md  20260503-host-conpty.md  20260503-terminal-uplift.md  20260503-wd-exec.md  20260504-wd-exec-fixes.md  20260504-wd-exec-via-gui-ipc.md  20260505-wd-exec-compress.md  20260506-bluetooth-le-transport.md  20260528-clipboard-files.md  20260703-interactive-wd-via-gui-ipc.md
scripts/: build-mac-all.sh  build-mac-app.sh  build-mac-term.sh  generate-icon.swift  generate-tray-icons.swift  run-mac.sh
scripts/icogen/: Cargo.toml
scripts/icogen/src/: main.rs
