[workspace]
resolver = "2"
members = [
    "crates/wiredesk-core",
    "crates/wiredesk-protocol",
    "crates/wiredesk-transport",
    "crates/wiredesk-exec-core",
    "apps/wiredesk-host",
    "apps/wiredesk-client",
    "apps/wiredesk-term",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
wiredesk-core = { path = "crates/wiredesk-core" }
wiredesk-protocol = { path = "crates/wiredesk-protocol" }
wiredesk-transport = { path = "crates/wiredesk-transport" }
wiredesk-exec-core = { path = "crates/wiredesk-exec-core" }
thiserror = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
serialport = "4"
crc = "3"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
base64 = "0.22"

# Bluetooth LE transport (Plan C) — async runtime + cross-platform BLE bindings
btleplug = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }
async-trait = "0.1"
futures = "0.3"

# Windows API bindings — union of features used by host (Win32 input/registry/threading)
# and transport (Devices_Bluetooth_* for BLE Peripheral GATT server). Cargo unifies
# features across consumers, so a single workspace declaration is the cleanest source.
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_Security",
    "Devices_Bluetooth",
    "Devices_Bluetooth_GenericAttributeProfile",
    "Devices_Bluetooth_Advertisement",
    "Storage_Streams",
    "Foundation",
    "Foundation_Collections",
] }
