[package]
name = "wiredesk-client"
version.workspace = true
edition.workspace = true

[dependencies]
wiredesk-core.workspace = true
wiredesk-protocol.workspace = true
wiredesk-transport.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
image = { version = "0.25", default-features = false, features = ["png"] }
serialport.workspace = true
arboard = "3"
dirs = "5"

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
accessibility-sys = "0.1"
