[package]
name = "wiredesk-client"
version.workspace = true
edition.workspace = true

[dependencies]
wiredesk-core.workspace = true
wiredesk-protocol.workspace = true
wiredesk-transport.workspace = true
wiredesk-exec-core.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
clap.workspace = true
serde.workspace = true
toml.workspace = true
eframe = "0.31"
egui_extras = { version = "0.31", features = ["image"] }
serialport.workspace = true
arboard = "3"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.25"
core-foundation = "0.10"
accessibility-sys = "0.1"
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSScreen", "NSStatusBar", "NSStatusItem"] }
objc2-foundation = { version = "0.2", features = ["NSArray", "NSString", "NSGeometry", "NSThread"] }
