[package]
name = "wiredesk-host"
version.workspace = true
edition.workspace = true

[dependencies]
wiredesk-core.workspace = true
wiredesk-protocol.workspace = true
wiredesk-transport.workspace = true
thiserror.workspace = true
log.workspace = true
clap.workspace = true
serde.workspace = true
serialport.workspace = true
toml.workspace = true
arboard = "3"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[build-dependencies]
embed-manifest = "1"
winresource = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }
native-windows-gui = "1"
native-windows-derive = "1"
portable-pty = "0.9"
